[gd_scene load_steps=10 format=3 uid="uid://rlhxkq2nl4mv"]

[ext_resource type="Script" uid="uid://bqsff2afky16f" path="res://potion/objects/processing_item.gd" id="1_8aror"]
[ext_resource type="Script" uid="uid://dr57ykcggbku2" path="res://potion/objects/timer_progress.gd" id="2_w3be1"]
[ext_resource type="PackedScene" uid="uid://byg2lnoey0c73" path="res://potion/items/scenes/item_popup.tscn" id="3_ccjue"]

[sub_resource type="ViewportTexture" id="ViewportTexture_8aror"]
viewport_path = NodePath("Sprite3D/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8aror"]
bg_color = Color(0.17641908, 0.17641911, 0.17641899, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3be1"]
bg_color = Color(0, 0.627905, 0.9827295, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8aror"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccjue"]
bg_color = Color(0.7173537, 0.15396485, 0.16913271, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_ccjue"]
viewport_path = NodePath("SubViewport")

[node name="ProcessingItem" type="Area3D" node_paths=PackedStringArray("progress", "label")]
collision_layer = 32768
collision_mask = 0
script = ExtResource("1_8aror")
progress = NodePath("Sprite3D/SubViewport/CenterContainer/Progress")
label = NodePath("Label3D")
metadata/_custom_type_script = "uid://buns64rcufm7p"

[node name="ProcessTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="OverheatStartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="OverheatTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0873187, 0)
billboard = 1
double_sided = false
no_depth_test = true
texture = SubResource("ViewportTexture_8aror")

[node name="SubViewport" type="SubViewport" parent="Sprite3D"]
transparent_bg = true
size = Vector2i(128, 128)

[node name="CenterContainer" type="CenterContainer" parent="Sprite3D/SubViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Progress" type="ProgressBar" parent="Sprite3D/SubViewport/CenterContainer" node_paths=PackedStringArray("timer")]
custom_minimum_size = Vector2(80, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_8aror")
theme_override_styles/fill = SubResource("StyleBoxFlat_w3be1")
max_value = 1.0
value = 0.5
show_percentage = false
script = ExtResource("2_w3be1")
timer = NodePath("../../../../ProcessTimer")

[node name="Overheat" type="ProgressBar" parent="Sprite3D/SubViewport/CenterContainer/Progress" node_paths=PackedStringArray("timer")]
custom_minimum_size = Vector2(80, 10)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_8aror")
theme_override_styles/fill = SubResource("StyleBoxFlat_ccjue")
max_value = 1.0
value = 0.2
show_percentage = false
script = ExtResource("2_w3be1")
timer = NodePath("../../../../../OverheatTimer")

[node name="ItemPopup" parent="." instance=ExtResource("3_ccjue")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8080401, 0)
texture = SubResource("ViewportTexture_ccjue")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4951732, 0)
billboard = 1
double_sided = false
no_depth_test = true
text = "Test"
